src/newUi.scss
/*
$fa-font-path: "~font-awesome/fonts";
@import "~font-awesome/scss/font-awesome.scss";
*/

@import 'https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap';

$purpleHathor: #8c46ff;
$purpleHathorButton: #8c46ff;
$purpleHathorButtonHover: #a46cff;
$purpleHathorHover: #5f2eaf;
$warning: #ce9c06;
$background-light: #fff;
$normal-text-light-color: #57606a;
$text-light-bold: #0d1117;
$secondary-color-light: #b7bfc7;
$background-dark: #0d1117;
$normal-text-dark-color: #b7bfc7;
$text-dark-bold: #fff;
$input-background-dark: #010409;
$secondary-color-dark: #191c21;

:root[data-theme='theme-light'] {
  --background-color: #fff;
  --alter-background-color: #f2f6fa;
  --normal-text-color: #57606a;
  --bold-text-color: #0d1117;
  --bg-color: #fafafa;
  --secondary-color: #f2f6fa;
  --input-background: #f2f6fa;
  --search-icon: url('./assets/images/search-icon-dark.svg');
  --purple-text: #8c46ff;
  --purple-toast: #e8daff;
  --purple-toast-border: #ba90ff;
  --background-focus: #f2f6fa;
  --text-focus: #0d1117;
  --border-color: #b7bfc7;
  --alter-border-color: #b7bfc7;
  --span-red-background: #fbebe9;
  --span-green-background: #43a32e6f;
  --span-purple-background: rgb(232 218 255 / 100%);
  --span-green-border: #44a32e;
  --span-red-border: #ff7966;
  --span-purple-border: rgb(186 144 255 / 100%);
  --timestamp-text: rgb(87 96 106);
  --created-at-text: #57606a;
  --dropdown-b: #b7bfc7;
  --border-disable-button: transparent;
  --copy-to-clipboard-alert-success: #44a32e;
  --copy-to-clipboard-alert-success-icon: #9be78a;
  --nav-dropdown: #fff;
  --network-data-top-text: #8c46ff;
  --network-data-connected: #9be78a;
  --network-data-connected-border: #44a32e;
  --tools-input-background: #f2f6fa;
  --background-network-select: #f2f6fa;
}

:root[data-theme='theme-dark'] {
  --background-color: #0d1117;
  --alter-background-color: #24292f;
  --normal-text-color: #b7bfc7;
  --bold-text-color: #fff;
  --secondary-color: #191c21;
  --input-background: #010409;
  --search-icon: url('./assets/images/search-icon-light.svg');
  --text-focus: #fff;
  --purple-text: #ba90ff;
  --purple-toast: #2a154d;
  --purple-toast-border: #542a99;
  --background-focus: #191c21;
  --border-color: #21262d;
  --alter-border-color: #484f58;
  --span-red-background: #590b00;
  --span-purple-background: rgb(42 21 77 / 100%);
  --span-purple-border: rgb(84 42 153 / 100%);
  --span-red-border: #991300;
  --span-green-background: #193d11;
  --span-green-border: #2e701f;
  --timestamp-text: rgb(87 96 106 / 50%);
  --created-at-text: rgb(183 191 199 / 50%);
  --dropdown-b: #23272f;
  --border-disable-button: #21262d;
  --copy-to-clipboard-alert-success: #193d11;
  --copy-to-clipboard-alert-success-icon: #59d73c;
  --nav-dropdown: #010409;
  --network-data-top-text: #fff;
  --network-data-connected: #def7d8;
  --network-data-connected-border: #44a32e;
  --tools-input-background: #0d1117;
  --background-network-select: #0d1117;
}

@font-face {
  font-family: 'San Francisco Pro';
  src: url('./assets/fonts/SFPRODISPLAYREGULAR.OTF') format('opentype');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'San Francisco Pro';
  src: url('./assets/fonts/SFPRODISPLAYBOLD.OTF') format('opentype');
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: 'Mona Sans';
  src: url('./assets/fonts/Mona-Sans.woff2') format('woff2');
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: 'Mona Sans Bold';
  src: url('./assets/fonts/MonaSans-Bold.woff2') format('woff2');
  font-weight: bold;
  font-style: normal;
}

body {
  background-color: var(--background-color) !important;
}

:export {
  purpleHathor: $purpleHathor;
}

.limit-section {
  display: flex;
  flex-direction: column;
  min-height: 100%;
  max-width: 1440px;
  margin: 0 auto;
}

.nav-title {
  color: var(--bold-text-color);
  white-space: nowrap;
  font-family: 'San Francisco Pro', sans-serif;
}

.footer-title {
  color: var(--bold-text-color);
}

.nano-list-container {
  .nano-list-title {
    font-size: 20px;
    line-height: 24px;
    font-weight: 700;
    color: var(--bold-text-color);
  }

  .filter-container {
    margin-top: 2rem;
    margin-bottom: 3.75rem;
    gap: 2rem;

    .tabs-container {
      gap: 2rem;
      width: 100%;

      .tab {
        padding: 0.75rem 1.25rem;
        font-size: 16px;
        line-height: 20px;
        font-weight: 500;
        border-bottom: 1px solid #24292F;
        max-width: 300px;
        width: 100%;
        text-align: center;
        cursor: pointer;
        color: var(--bold-text-color);
        transition: 0.3s;
      }

      .tab:hover {
        border-bottom: 1px solid #8C46FF;
      }

      .tab.active {
        border-bottom: 1px solid #8C46FF;
        cursor: default;
      }
    }
  }
}
/* ... */

